--- a/configs/model.yaml
+++ b/configs/model.yaml
@@ -3,4 +3,16 @@ MODEL:
     SEQUENCE_LENGTH : 15
     HIDDEN_EMBEDDING_SIZE : 512
     INPUT_SIZE : 256
-
+  VIT:
+    NO_IN_FEATURES : 2048
+    NO_OUT_FEATURES : 512 
+    NO_PATHES : 36 
+    NO_BLOCKS : 3
+    NO_HEADS : 8
+    DROPOUT : 0.1
+  SLM:
+    NO_FEATURES : 512
+    SEQUENCE_LENGTH : 15
+    NO_BLOCKS : 3
+    NO_HEADS : 8
+    DROPOUT : 0.1
