--- a/configs/model.yaml
+++ b/configs/model.yaml
@@ -1,16 +1,19 @@
 MODEL:
-  TEXT_RNN:
+  TEXT:
+    TYPE : "LSTM"
     SEQUENCE_LENGTH : 15
     HIDDEN_EMBEDDING_SIZE : 512
     INPUT_SIZE : 256
-  VIT:
+  IMAGE:
+    TYPE : "VIT"
     NO_IN_FEATURES : 2048
     NO_OUT_FEATURES : 512 
     NO_PATCHES : 36 
     NO_BLOCKS : 3
     NO_HEADS : 8
     DROPOUT : 0.1
-  SLM:
+  MLP:
+    TYPE : "SLM"
     NO_FEATURES : 512
     SEQUENCE_LENGTH : 15
     NO_BLOCKS : 3
