--- a/configs/model.yaml
+++ b/configs/model.yaml
@@ -4,8 +4,10 @@ MODEL:
     SEQUENCE_LENGTH : 15
     HIDDEN_EMBEDDING_SIZE : 512
     INPUT_SIZE : 256
+    TOKEN_TYPE : "PAD_ONLY"
   IMAGE:
     TYPE : "VIT"
+    
     NO_IN_FEATURES : 2048
     NO_OUT_FEATURES : 512 
     NO_PATCHES : 36 
