--- a/configs/model.yaml
+++ b/configs/model.yaml
@@ -14,7 +14,7 @@ MODEL:
     NO_BLOCKS : 3
     NO_HEADS : 8
     DROPOUT : 0.1
-  MLP:
+  LANGUAGE_MODEL:
     TYPE : "SLM"
     NO_FEATURES : 512
     SEQUENCE_LENGTH : 15
