--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,3 +1,5 @@
 TRAIN:
-  EPOCHS: 200
-  LR: 0.001
+  EPOCHS: 100
+  LR: 0.0001
+  ANNOTATIONS_FILE: 'C:/My stuff/An 2 Master VUB/DL/VQA/datasets/miniCOCO_train_annotations.json'
+  QUESTIONS_FILE: 'C:/My stuff/An 2 Master VUB/DL/VQA/datasets/miniCOCO_train_questions.json'
