--- a/configs/model.yaml
+++ b/configs/model.yaml
@@ -1,6 +1,6 @@
 MODEL:
   TEXT:
-    TYPE : "LSTMDeep"
+    TYPE : "DeepLSTM"
     SEQUENCE_LENGTH : 15
     HIDDEN_EMBEDDING_SIZE : 512
     INPUT_SIZE : 256
