--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,10 +1,16 @@
 TRAIN:
   EPOCHS: 200
   LR: 0.001
-  ANNOTATIONS_FILE: 'C:/My stuff/An 2 Master VUB/DL/VQA/datasets/miniCOCO_train_annotations.json'
-  QUESTIONS_FILE: 'C:/My stuff/An 2 Master VUB/DL/VQA/datasets/miniCOCO_train_questions.json'
+  ANNOTATIONS_FILE: '../datasets/miniCOCO_train_annotations.json'
+  QUESTIONS_FILE: '../datasets/miniCOCO_train_questions.json'
   EARLY_STOPPING_PERFORMANCE_EPS: 0.1
-  EARLY_STOPPING_EPOCHS_NUM: 5
+  EARLY_STOPPING_EPOCHS_NUM: 10
+  OPTIMIZER: 'adam'
+  ADAM:
+    BETA_1: 0.9
+    BETA_2: 0.98
+  BATCH_SIZE: 512  
 VAL:
-  ANNOTATIONS_FILE: 'C:/My stuff/An 2 Master VUB/DL/VQA/datasets/miniCOCO_val_annotations.json'
-  QUESTIONS_FILE: 'C:/My stuff/An 2 Master VUB/DL/VQA/datasets/miniCOCO_val_questions.json'
+  ANNOTATIONS_FILE: '../datasets/miniCOCO_val_annotations.json'
+  QUESTIONS_FILE: '../datasets/miniCOCO_val_questions.json'
+  BATCH_SIZE: 256 
